--- a/Builds/VisualStudio2013/Plugins/Plugin_Release32.props
+++ b/Builds/VisualStudio2013/Plugins/Plugin_Release32.props
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
-  <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Label="UserMacros">
+    <GUIDir>..\..\Release\bin</GUIDir>
+    <PluginDir>$(GUIDir)\plugins</PluginDir>
+  </PropertyGroup>
   <PropertyGroup>
     <_PropertySheetDisplayName>Plugin_Release32</_PropertySheetDisplayName>
   </PropertyGroup>
@@ -11,9 +14,22 @@
       <PreprocessorDefinitions>OEPLUGIN;WIN32;_WINDOWS;NDEBUG;JUCE_API=__declspec(dllimport);JUCER_VS2013_78A5020=1;JUCE_APP_VERSION=0.3.5;JUCE_APP_VERSION_HEX=0x305;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>..\..\Debug\bin</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(GUIDir)</AdditionalLibraryDirectories>
       <AdditionalDependencies>open-ephys.lib;setupapi.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>copy /Y "$(OutDir)$(TargetFileName)" "$(PluginDir)\"</Command>
+    </PostBuildEvent>
+    <PreLinkEvent>
+      <Command>if not exist "$(PluginDir)" mkdir "$(PluginDir)"</Command>
+    </PreLinkEvent>
   </ItemDefinitionGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BuildMacro Include="GUIDir">
+      <Value>$(GUIDir)</Value>
+    </BuildMacro>
+    <BuildMacro Include="PluginDir">
+      <Value>$(PluginDir)</Value>
+    </BuildMacro>
+  </ItemGroup>
 </Project>
